--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: Haram Kim
+bio: Computer vision researcher
 
 # twitter summary info
-description: A blog about technology and stuff related
+description:  
 
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: 
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -16,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://koppl.in/indigo
+url: https://Haram-kim.github.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
