--- a/_config.yml
+++ b/_config.yml
@@ -37,12 +37,12 @@ disqus:
 # facebook: myfacebook
 # twitter: mytwitter
 # google: mygoogle
-instagram: https://www.instagram.com/rlgkfka614/
+instagram: rlgkfka614
 # pinterest: mypinterest
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: https://github.com/Haram-kim/
+github: Haram-kim
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
